<resources>
    <string name="app_name">OnlineCoursesApp</string>
    <string name="textview">TextView</string>
    <string name="detail">Detail</string>
    <string name="course_content">Course Content</string>
    <string name="_4_task">4 Task</string>
    <string name="how_to_become_a_ui_ux_designer">How to become a Ui / Ux designer</string>
    <string name="online_courses">Online courses</string>
    <string name="categories">Categories</string>
    <string name="courses">Courses</string>
    <string name="choose_your_role">Choose Your Role</string>
    <string name="by_choosing_a_role_you_will_find_it_easier_to_get_the_part_that_should_have_that_role">By choosing a role, you will find it easier to get the part that should have that role</string>
    <string name="onboarding">You have a unique chance to test your logic and intuition, and maybe your knowledge! Choose a match and try to guess the outcome. If you can\'t choose a match by yourself, our great random function does it for you!</string>
    <string name="it">IT</string>
    <string name="Movie">Movie</string>
    <string name="Photo">Photo</string>
    <string name="Drawing">Drawing</string>
    <string name="student">Student</string>
    <string name="get_started">Get Started</string>
    <string name="teacher">Teacher</string>
    <string name="get_this_course">Get This Course</string>
    <string name="Beginner">Beginner</string>
    <string name="Pro">Pro</string>
    <string name="Introduction_to_Programming">Introduction to Programming</string>
    <string name="Basic_Programming_Concepts">Basic Programming Concepts</string>
    <string name="Data_Structures">Data Structures</string>
    <string name="Functions_and_Modules">Functions and Modules</string>
    <string name="Errors_and_Exceptions">Errors and Exceptions</string>
    <string name="Web_Application_Development">Web Application Development</string>
    <string name="Web_Technologies_and_HTMLCSS_Fundamentals">Web Technologies and HTML/CSS Fundamentals</string>
    <string name="JavaScript_and_Client_Side_Development">JavaScript and Client-Side Development</string>
    <string name="Server_Side_Development_and_Databases">Server-Side Development and Databases</string>
    <string name="Web_Application_Development_and_Deployment">Web Application Development and Deployment</string>
    <string name="Basics_of_Photography">Basics of Photography</string>
    <string name="Introduction_to_photography">Introduction to photography</string>
    <string name="IT_beginner_description">In this module, students learn the basic concepts of programming, such as variables, operators, conditional statements, and loops. They also practice writing simple programs in programming languages like Python or Java</string>
    <string name="IT_beginner_description_2">In this module, students learn about different data structures such as arrays, linked lists, stacks, and queues. They study their basic operations and algorithms, as well as the application of each data structure in programming</string>
    <string name="IT_beginner_description_3">In this module, students delve into the study of functions and modules in programming. They learn how to define and use functions, as well as how to organize their code using modules. Students also familiarize themselves with concepts of scope and module importing</string>
    <string name="IT_beginner_description_4">In this module, students learn about various types of errors in programming and ways to handle them using exceptions. They learn how to use try-except blocks to handle exceptions and prevent program crashes</string>
    <string name="IT_pro_description_1">In this module, students learn about web technologies and the basics of web application development. They study HTML and CSS markup languages, basic elements of a web page, and element styling</string>
    <string name="IT_pro_description_2">In this module, students dive into the world of JavaScript and learn its fundamentals, such as variables, operators, functions, and objects. They also learn about dynamically changing web page content using JavaScript and interacting with users</string>
    <string name="IT_pro_description_3">In this module, students get acquainted with server-side programming and working with databases. They learn a server-side programming language like Node.js and study the basics of working with databases, such as SQL</string>
    <string name="IT_pro_description_4">In this module, students practice developing a complete web application. They learn about the process of development, testing, and deploying web applications, as well as best practices and tools for improving the development process</string>
    <string name="photo_beginner_description_1">Basic concepts and principles of photography, history of photography, types of cameras and their features</string>
    <string name="photo_beginner_description_2">Adjusting camera settings (aperture, shutter speed, ISO), lens selection, use of different shooting modes</string>
    <string name="photo_beginner_description_3">Rule of thirds, golden ratio, balance and harmony, selecting a perspective and shooting point</string>
    <string name="photo_beginner_description_4">Using natural and artificial lighting, exposure measurement, exposure correction</string>
    <string name="photo_pro_description_1">Key techniques for capturing portraits, choosing location and background, using light to create mood</string>
    <string name="photo_pro_description_2">Characteristics of shooting natural landscapes, composition and perspective selection, working with lighting and colors</string>
    <string name="photo_pro_description_3">Capturing everyday life on city streets, capturing moments, working with people and the dynamics of the urban environment</string>
    <string name="photo_pro_description_4">Techniques for capturing dynamic scenes, using high shutter speeds, synchronizing with moving objects</string>
    <string name="Camera_operation">Camera operation</string>
    <string name="Composition_and_perspective">Composition and perspective</string>
    <string name="Lighting_and_exposure">Lighting_and_exposure</string>
    <string name="Photography_Genres">Photography Genres</string>
    <string name="Portrait_photography">Portrait photography</string>
    <string name="Landscape_photography">Landscape photography</string>
    <string name="Street_photography">Street photography</string>
    <string name="Sports_photography">Sports photography</string>
</resources>