<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail_screen.DetailScreenFragment">


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/get_this_course"
        android:textColor="@color/white"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnGetThisCourse"
        app:layout_constraintEnd_toEndOf="@+id/btnGetThisCourse"
        app:layout_constraintStart_toStartOf="@+id/btnGetThisCourse"
        app:layout_constraintTop_toTopOf="@+id/btnGetThisCourse" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/icon_background_detail_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnBackDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/icon_button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/detail"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnBackDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBackDetail" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/course_content"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/tvDescriptionCourse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/inter"
        android:text="@string/detail"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/tvTitleCourse"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleCourse" />

    <TextView
        android:id="@+id/tvCountTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/_4_task"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <TextView
        android:id="@+id/tvTitleCourse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="148dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/how_to_become_a_ui_ux_designer"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnBackDetail"
        app:layout_constraintTop_toBottomOf="@+id/btnBackDetail" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="45dp"
        android:src="@drawable/icon_task"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/btnGetThisCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:src="@drawable/icon_button_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnGetThisCourse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitleContent2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/inter"
                android:text="@string/textview"
                android:textColor="@color/dark_grey"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView12"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="@+id/imageView12"
                app:layout_constraintVertical_bias="0.526" />

            <TextView
                android:id="@+id/tvTitleContent3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/inter"
                android:text="@string/textview"
                android:textColor="@color/dark_grey"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView17"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="@+id/imageView17"
                app:layout_constraintVertical_bias="0.526" />

            <TextView
                android:id="@+id/tvTitleContent4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/inter"
                android:text="@string/textview"
                android:textColor="@color/dark_grey"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView18"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="@+id/imageView18"
                app:layout_constraintVertical_bias="0.526" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/icon_one"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/icon_two"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView19" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/icon_three"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView20" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/icon_thour"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView21" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView11" />

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView12" />

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView17" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_line"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView18" />

            <TextView
                android:id="@+id/tvTitleContent1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/inter"
                android:text="@string/textview"
                android:textColor="@color/dark_grey"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="@+id/imageView11"
                app:layout_constraintVertical_bias="0.526" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>